It is second commit

--- a/src/main/res/layout-land/activity_splash_screen.xml
+++ b/src/main/res/layout-land/activity_splash_screen.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/success_people_back_v">
+    tools:context=".activities.SplashScreenActivity">
 
-    <GridView
-        android:id="@+id/gridView"
-        android:layout_width="match_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:horizontalSpacing="1dp"
-        android:numColumns="2"
-        android:verticalSpacing="1dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/logo_inscription" />
 </RelativeLayout>
